--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "yargs": "^17.3.1"
   },
   "dependencies": {
-    "chalk": "^2.4.1"
+    "chalk": "^2.4.1",
+    "console-table-printer": "^2.10.0"
   }
 }
