--- a/weatherapp/package.json
+++ b/weatherapp/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
     "chalk": "^2.4.1",
     "request": "^2.88.2"
   }
