--- a/weatherapp/package.json
+++ b/weatherapp/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^0.26.1",
     "chalk": "^2.4.1",
+    "express": "^4.17.3",
     "request": "^2.88.2"
-  }
+  },
+  "devDependencies": {}
 }
