--- a/excelwork/package.json
+++ b/excelwork/package.json
@@ -13,13 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@googleapis/docs": "^0.2.0",
-    "chalk": "^5.0.1",
+    "chalk": "^2.4.1",
     "express": "^4.17.3",
     "fast-csv": "^4.3.6",
     "fs": "^0.0.1-security",
     "googleapis": "^97.0.0",
     "http": "^0.0.1-security",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "yargs": "^17.4.0"
   },
   "devDependencies": {
     "xlsx": "^0.18.4"
